<resources>
    <string name="app_name">YAWA</string>
    <string name="app_name_long">Yet Another Weather App</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>

    <string name="search">Search&#8230;</string>

    <string name="default_temp_unit">metric</string>
    <string name="default_theme">0</string>

    <string name="weather_status_icon">Weather Status Icon</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_message">You are not connected to the internet, Please check your internet connection!</string>
    <string name="no_internet">No Internet</string>
    <string name="humidity_label">Humidity</string>
    <string name="colon">:</string>
    <string name="pressure_label">Pressure</string>
    <string name="wind_speed_label">W. Speed</string>
    <string name="wind_direction_label">W. Direction</string>

    <string name="pressure_unit">hPa</string>

    <string name="wind_speed_unit_metric">km/h</string>
    <string name="wind_speed_unit_imperial">mph</string>

    <string name="app_icon">App Icon</string>
    <string name="website_url">https://www.linkedin.com/in/mostafa-saleh/</string>
    <string name="legal_notice"><p align="justify">Not liable for any damage incurred from use of this software including but not limited to: monetary loss, temporary paralysis, halitosis, spontaneous combustion, road rash, and or premature hair loss.</p></string>
    <string name="phone_number">+201062182654</string>

    <string name="about">About</string>

    <string name="country_not_supported">Sorry, this country is not supported!</string>

</resources>
