<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.NoInternetFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/no_internet"
        android:src="@drawable/ic_no_internet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/no_internet_message"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_retry_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_refresh"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/try_again"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
