<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp"
    tools:context=".fragments.DetailsFragment">

    <TableLayout
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow>

            <TextView
                android:id="@+id/temp_max_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|bottom"
                android:textSize="90sp"
                android:textStyle="bold"
                tools:text="22°" />

            <ImageView
                android:id="@+id/weather_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weather_status_icon"
                android:src="@drawable/art_clear" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/temp_min_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:textSize="50sp"
                android:textStyle="bold"
                tools:text="15°" />

            <TextView
                android:id="@+id/weather_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="40sp"
                tools:text="Sunny" />
        </TableRow>

    </TableLayout>

    <com.github.lzyzsd.circleprogress.ArcProgress
        android:id="@+id/clouds_arc_progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/overview"
        android:layout_marginTop="20dp"
        custom:arc_bottom_text="Clouds"
        custom:arc_bottom_text_size="14sp"
        custom:arc_finished_color="?colorPrimary"
        custom:arc_max="100"
        custom:arc_progress="10"
        custom:arc_stroke_width="6dp"
        custom:arc_text_color="?android:textColorSecondary"
        custom:arc_unfinished_color="@color/light_grey" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/clouds_arc_progress"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/clouds_arc_progress"
        android:layout_toStartOf="@+id/clouds_arc_progress">

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/pressure_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginStart="1dp"
                android:text="@string/colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_marginStart="7dp"
                android:textSize="18sp"
                tools:text="120 hPa" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/humidity_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginStart="1dp"
                android:text="@string/colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_marginStart="7dp"
                android:textSize="18sp"
                tools:text="80%" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/wind_direction_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginStart="1dp"
                android:text="@string/colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wind_direction"
                android:layout_marginStart="7dp"
                android:textSize="18sp"
                tools:text="NW" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/wind_speed_label"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_marginStart="1dp"
                android:text="@string/colon"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_wind_speed"
                android:layout_marginStart="7dp"
                android:textSize="18sp"
                tools:text="80 km/h" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
